add send mail to active acccount, reset password
