# internal/dto/mail.go
@@ -1,0 +1,5 @@
+package dto
+
+type MailRequest struct {
+	Email string `json:"email" binding:"required,email"`
+}
